改动及更新： 1.在原版基础上增加了命令行参数模式 2.使用tkinter写了个GUI版本 3.稍微对README做了点修改

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
 	"sourceDirectory":".\\sources\\",
-	"dictDirectory":".\\dictionary.csv",
-	"inputDirectory":".\\textToRead.txt",
-	"outputDirectory":".\\Output.wav"
+	"dictFile":".\\dictionary.csv",
+	"inputFile":".\\textToRead.txt",
+	"outputFile":".\\Output.wav"
 }
