--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,9 @@
 {
 	"sourceDirectory":".\\sources\\",
+	"ysddSourceDirectory":".\\ysddSources\\",
 	"dictFile":".\\dictionary.csv",
+	"ysddTableFile":".\\ysddTable.csv",
+	"ysddModeEnabled": true,
 	"inputFile":".\\textToRead.txt",
 	"outputFile":".\\Output.wav"
 }
