重构了部分代码，为以后的更新做准备

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-./__pycache__
-./HZYSTempOutput
-Output.wav
-
-# Build file
-./build
-./dist
-
-# Spec file(pyinstaller)
-*.spec
+/__pycache__
+/HZYSTempOutput
