添加对Linux的支持

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
-	"sourceDirectory":".\\sources\\",
-	"ysddSourceDirectory":".\\ysddSources\\",
-	"dictFile":".\\dictionary.json",
-	"ysddTableFile":".\\ysddTable.json"
+	"sourceDirectory":"./sources/",
+	"ysddSourceDirectory":"./ysddSources/",
+	"dictFile":"./dictionary.json",
+	"ysddTableFile":"./ysddTable.json"
 }
