--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,20 @@
 /HZYSTempOutput
 
 #用于测试的输入输出
-*.wav
-textToRead.txt
+/*.wav
+/textToRead.txt
 
 #转换成可执行文件过程中生成的临时文件
 /excutables
 
 #打包好的文件
-*.exe
-*.bin
-*.zip
+/*.exe
+/*.bin
+/*.zip
 
 #用于测试模块的代码
-*.ipynb
+/*.ipynb
+
+#演示视频
+/*.flv
+/*.mp4
